--- a/source/openid-waitingroom/www/login.html
+++ b/source/openid-waitingroom/www/login.html
@@ -3,7 +3,7 @@ Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 SPDX-License-Identifier: Apache-2.0
 -->
 
-<html>
+<html lang="en">
 
 <head>
     <title>
