Add sample control panel and build script updates

--- a/source/core-api-authorizers-sample/www/waitingroom/index.html
+++ b/source/core-api-authorizers-sample/www/waitingroom/index.html
@@ -16,7 +16,7 @@ SPDX-License-Identifier: Apache-2.0
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="api_endpoints.js"></script>
+    <script src="../api_endpoints.js"></script>
 </head>
 
 <body>
