Updates for SQ issues #193

--- a/source/core-api-authorizers-sample/www/waitingroom/index.html
+++ b/source/core-api-authorizers-sample/www/waitingroom/index.html
@@ -2,6 +2,8 @@
 Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 SPDX-License-Identifier: Apache-2.0
 -->
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -23,7 +25,7 @@ SPDX-License-Identifier: Apache-2.0
     <div class="w-100">
         <p class="my-3 w-50 text-center mx-auto">
             This page is a simple demonstration of a waiting room working with the Virtual Waiting Room Core API. You
-            are sent here from the e-commerce system to <b>Get in Line</b> and wait until it is your <b>Time To Go!</b>
+            are sent here from the e-commerce system to <strong>Get in Line</strong> and wait until it is your <b>Time To Go!</b>
         </p>
         <p class="my-3 w-50 text-center mx-auto">
             After moving through the waiting room queue, the browser can receive a JWT token to use for authenticated
