--- a/source/openid-waitingroom/www/login.html
+++ b/source/openid-waitingroom/www/login.html
@@ -3,6 +3,7 @@ Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 SPDX-License-Identifier: Apache-2.0
 -->
 
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -24,7 +25,7 @@ SPDX-License-Identifier: Apache-2.0
     <div class="w-100">
         <p class="my-3 w-50 text-center mx-auto">
             This page is a simple demonstration of a waiting room working with the Open ID adapter. You are redirected
-            here from the e-commerce system to <b>Get in Line</b> and wait until it is your <b>Time To Go!</b>
+            here from the e-commerce system to <strong>Get in Line</strong> and wait until it is your <b>Time To Go!</b>
         </p>
     </div>
     <p class="text-center my-2">
