Updates for SQ issues

--- a/source/openid-waitingroom/www/login.html
+++ b/source/openid-waitingroom/www/login.html
@@ -25,7 +25,7 @@ SPDX-License-Identifier: Apache-2.0
     <div class="w-100">
         <p class="my-3 w-50 text-center mx-auto">
             This page is a simple demonstration of a waiting room working with the Open ID adapter. You are redirected
-            here from the e-commerce system to <strong>Get in Line</strong> and wait until it is your <b>Time To Go!</b>
+            here from the e-commerce system to <strong>Get in Line</strong> and wait until it is your <strong>Time To Go!</strong>
         </p>
     </div>
     <p class="text-center my-2">
