--- a/source/core-api-authorizers-sample/www/waitingroom/index.html
+++ b/source/core-api-authorizers-sample/www/waitingroom/index.html
@@ -25,7 +25,7 @@ SPDX-License-Identifier: Apache-2.0
     <div class="w-100">
         <p class="my-3 w-50 text-center mx-auto">
             This page is a simple demonstration of a waiting room working with the Virtual Waiting Room Core API. You
-            are sent here from the e-commerce system to <strong>Get in Line</strong> and wait until it is your <b>Time To Go!</b>
+            are sent here from the e-commerce system to <strong>Get in Line</strong> and wait until it is your <strong>Time To Go!</strong>
         </p>
         <p class="my-3 w-50 text-center mx-auto">
             After moving through the waiting room queue, the browser can receive a JWT token to use for authenticated
