--- a/source/openid-waitingroom/www/login.html
+++ b/source/openid-waitingroom/www/login.html
@@ -10,14 +10,10 @@ SPDX-License-Identifier: Apache-2.0
     <title>
         Virtual Waiting Room on AWS Entry
     </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <link href="dist/bootstrap.min.css" rel="stylesheet">
+    <script src="dist/jquery.min.js"></script>
+    <script src="dist/bootstrap.bundle.min.js"></script>
+    <script src="dist/axios.min.js"></script>
     <script src="api_endpoints.js"></script>
 </head>
 
